# dpose

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  plugin.xml
.github/workflows/: noetic.yml
dpose_core/: CMakeLists.txt  README.md  package.xml
dpose_core/perf/: dpose_core.cpp  dpose_costmap.cpp
dpose_core/src/: dpose.cpp  dpose_core.cpp  dpose_costmap.cpp  dpose_ros.cpp
dpose_core/src/dpose_core/: dpose.hpp  dpose_core.hpp  dpose_costmap.hpp  dpose_ros.hpp
dpose_core/test/: check_footprint.cpp  cost_data.cpp  draw_polygon.cpp  get_circular_cells.cpp  get_derivatives.cpp  hessian_data.cpp  jacobian_data.cpp  lethal_cells_within.cpp  node.cpp  pose_gradient.cpp  tolerance.cpp
dpose_goal_tolerance/: CMakeLists.txt  README.md  package.xml  plugin.xml
dpose_goal_tolerance/cfg/: DposeGoalTolerance.cfg
dpose_goal_tolerance/doc/: footprint_transformer.py  pose_publisher.py
dpose_goal_tolerance/example/: example.launch  example.yaml  example_map.yaml
dpose_goal_tolerance/src/: dpose_goal_tolerance.cpp
dpose_goal_tolerance/src/dpose_goal_tolerance/: dpose_goal_tolerance.hpp
dpose_goal_tolerance/test/: dpose_goal_tolerance.cpp  dpose_goal_tolerance.launch
dpose_layer/: CMakeLists.txt  package.xml  plugin.xml
dpose_layer/src/: dpose_layer.cpp
dpose_layer/src/dpose_layer/: dpose_layer.hpp
dpose_recovery/: CMakeLists.txt  package.xml  plugin.xml
dpose_recovery/doc/: doxygen_log.txt  mainpage.dox
dpose_recovery/example/: example.launch  example.urdf.xacro  example.yaml  example_stage.world
dpose_recovery/src/: dpose_recovery.cpp
dpose_recovery/src/dpose_recovery/: dpose_recovery.hpp
dpose_recovery/test/: dpose_recovery.cpp  dpose_recovery.launch
src/: laces.cpp  laces_ros.cpp
src/laces/: laces.hpp  laces_ros.hpp
test/: draw_polygon.cpp  euclidean_distance_transform.cpp  get_circular_cells.cpp  get_derivatives.cpp  node.cpp
