<?xml version="1.0"?>
<package format="2">
  <name>laces</name>
  <version>0.0.0</version>
  <description>The laces package makes your footprint fit</description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>boost</depend>
  <depend>libopencv-dev</depend>
</package>
