<?xml version="1.0"?>
<package format="2">
  <name>dpose</name>
  <version>0.0.0</version>
  <description>The dpose package makes your footprint fit</description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gpp_interface</depend>

  <!-- non-ros-related libs -->
  <depend>boost</depend>
  <depend>libopencv-dev</depend>

  <export>
    <costmap_2d plugin="${prefix}/plugin.xml"/>
  </export>
</package>
