<?xml version="1.0"?>
<package format="2">
  <name>dpose_core</name>
  <version>0.0.0</version>
  <description>The dpose is a package for computing footprint derivatives</description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>

  <!-- non-ros-related libs -->
  <depend>libopencv-dev</depend>
  <depend>eigen</depend>

  <test_depend>rostest</test_depend>

</package>
