<?xml version="1.0"?>
<package format="2">
  <name>dpose_goal_tolerance</name>
  <version>0.0.0</version>
  <description>The package offers goal-tolerances for global-planners as a gpp-pre-planning plugin </description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gpp_interface</depend>
  <depend>dpose_core</depend>

  <test_depend>rostest</test_depend>

  <export>
    <gpp_interface plugin="${prefix}/plugin.xml" />
  </export>
</package>
