<?xml version="1.0"?>
<package format="2">
  <name>dpose_layer</name>
  <version>0.0.0</version>
  <description>Debug package for the dpose-core package</description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>dpose_core</depend>

</package>
