<?xml version="1.0"?>
<package format="2">
  <name>dpose_recovery</name>
  <version>0.0.0</version>
  <description>The dpose recovery will minimize the cost of the footprint</description>

  <maintainer email="dmitrij.dorezyuk@hotmail.de">Dima Dorezyuk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dpose_core</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- non-ros-related libs -->
  <depend>eigen</depend>
  <depend>coinor-libipopt-dev</depend>
  <!-- below required libs to use ipopt from package-config -->
  <depend>gfortran</depend>
  <depend>liblapack-dev</depend>
  <depend>libblas-dev</depend>
  <depend>pkg-config</depend>

  <test_depend>rostest</test_depend>
  <export>
    <nav_core plugin="${prefix}/plugin.xml" />
  </export>

</package>
